--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ a {
     text-decoration: none;
 }
 
+
+
 img {
     max-width: 100%;
     height: auto;
@@ -137,6 +139,7 @@ input {
     height: 100vh;
     background-color: var(--body-color);
     border-right: 1px solid var(--box-color);
+    transition: .5s;
 }
 
 .nav__logo {
@@ -197,6 +200,33 @@ input {
 .social__share {
     font-size: 1.5rem;
 }
+
+.nav__toggle {
+    height: 32px;
+    width: 36px;
+    cursor: pointer;
+    position: fixed;
+    right: 1.5rem;
+    top: 2rem;
+    font-size: 1.2rem;
+    border-radius: .25rem;
+    background-color: var(--skin-color);
+    color: var(--title-color);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.nav__close {
+    font-size: 1.5rem;
+    position: absolute;
+    top: 1rem;
+    right: 1.25rem;
+    cursor: pointer;
+    display: none;
+}
+
 /* Active Link */
 
 .nav__link.active-link, .nav__link:hover {
@@ -235,7 +265,7 @@ main {
     position: relative;
     height: 100%;
     align-items: center;
-    margin-left: 35px;
+    margin-left: 53px;
 }
 
 .home__social {
@@ -282,6 +312,23 @@ main {
     display: none;
 }
 
+.home__container-data {
+    display: flex;
+}
+
+.home__container--img {
+    width: 100%;
+    position: relative;
+    left: 70px;
+}
+
+.profile__img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 50px;
+}
+
+
 .home__title {
     font-size: var(--biggest-font-size)
 }
@@ -294,7 +341,8 @@ main {
 
 .home__description { 
     max-width: 450px;
-    margin-bottom: var(--mb-2)
+    margin-bottom: var(--mb-2);
+    text-align: justify;
 }
 
 
@@ -306,10 +354,7 @@ main {
     bottom: 1.8rem
 }
 
-.info__item {
-    display: flex;
-    align-items: center;
-}
+
 
 .info__title,
 .info__subtitle {
@@ -805,4 +850,367 @@ main {
 ::-webkit-scrollbar-thumb {
     background-color: var(--scroll-thumb-color);
     border-radius: .5rem;
+}
+
+/* BREAKPOINTS */
+/* Large Devices */
+@media screen and (max-width: 1408px) {
+    .container {
+        margin-left: var(--mb-2-5);
+        margin-right: var(--mb-2-5);
+    }
+}
+
+@media screen and (max-width: 1216px) {
+    .about__container {
+        column-gap: 2.5rem;
+    }
+
+    .about__description {
+        padding-right: 0;
+    }
+
+    .work__container {
+        grid-template-columns: repeat(2, 330px);
+        gap: 2.5rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        margin-left: var(--mb-1-5);
+        margin-right: var(--mb-1-5);
+    }
+
+    .sidebar {
+        width: 100%;
+        z-index: 999;
+        transform: translateX(-100%);
+    }
+
+    .show-sidebar {
+        transform: translateX(0);
+    }
+
+
+    .nav__menu {
+        height: 100%;
+        width: 100%;
+        transform: rotate(0deg) translateX(0);
+        display: flex;
+        justify-content: center;
+    }
+
+    .nav__list {
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav__link {
+        padding: 1rem 0;
+        line-height: 1.5;
+    }
+
+    .nav__link.active-link::after, .nav__link:hover::after{
+        bottom: 0;
+    }
+
+    .nav__close {
+        display: block;
+    }
+
+    .nav__toggle {
+        display: flex;
+    }
+
+    .main {
+        margin-left: 0;
+    }
+
+    .about__container {
+        grid-template-columns: 1fr;
+        row-gap: 2.5rem;
+    }
+
+    .about__img {
+        width: 350px;
+    }
+
+    .about__data {
+        text-align: center;
+    }
+
+    .about__info {
+        justify-content: center;
+    }
+
+    .about__box {
+        padding: .75rem .5rem;
+    }
+
+    .about__description {
+        padding: 0 4rem;
+        text-align: center;
+    }
+
+    .qualification__container {
+        grid-template-columns: repeat(2, 290px);
+    }
+
+    .skills__container {
+        grid-template-columns: 340px 300px;
+    }
+
+    .skills__list {
+        row-gap: 1.7rem;
+    }
+
+    .work__card {
+        padding: 1rem;
+    }
+
+    .work__img {
+        margin-bottom: var(--mb-0-75);
+    }
+
+    .work__title {
+        margin-bottom: var(--mb-0-25);
+    }
+
+    .portfolio__item-details {
+        margin-bottom: var(--mb-1-5);
+    }
+
+    .details__info li {
+        margin-bottom: var(--mb-0-5);
+    }
+
+    .details__title {
+        margin-bottom: var(--mb-0-75);
+    }
+}
+/* Medium Devices */
+@media screen and (max-width: 768px) {
+    .about__img {
+        width: 250px;
+    }
+
+    .qualification__container {
+        grid-template-columns: 290px;
+        row-gap: 3rem;
+    }
+
+    .skills__container {
+        grid-template-columns: 300px;
+        row-gap: 3rem;
+    }
+
+    .work__container {
+        grid-template-columns: 330px;
+    }
+
+    .services__container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+    }
+
+    .services__content {
+        padding: 3.5rem .5rem 1.25rem 1.5rem;
+    }
+
+    .services__icon {
+        font-size: 1.5rem;
+    }
+
+    .contact__container {
+        grid-template: 360px;
+        row-gap: 3rem;
+    }
+
+    .footer__container {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 3rem;
+        justify-content: center;
+    }
+
+    .footer__socials {
+        justify-self: start;
+    }
+
+    .footer__links {
+        flex-direction: column;
+        row-gap: 1.5rem;
+    }
+
+    .footer__bg {
+        padding: 2rem 0 3rem;
+    }
+
+    .footer__copy {
+        margin-top: var(--mb-3);
+    }
+
+    .portfolio__popup-inner {
+        width: 420px;
+        padding: 2.8rem 1.5rem 2.5rem;
+    }
+
+    .portfolio__popup-content {
+        grid-template-columns: 1fr;
+        row-gap: 1.6rem;
+    }
+
+    .details__title {
+        font-size: var(--normal-font-size);
+    }
+
+    .portfolio__popup-close {
+        top: .5rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .nav__toggle {
+        right: initial;
+        left: 1.5rem;
+    }
+
+    .home {
+    background-color: #17181d;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    }
+
+    .home__container {
+        row-gap: 2rem;
+    }
+
+    .home__img {
+        display: none;
+    }
+
+    .home__social {
+        left: 8rem;
+        flex-direction: row;
+        row-gap: 2rem;
+    }
+
+
+    .home__social-follow {
+        font-size: var(--smaller-font-size);
+    }
+
+    .home__social-links {
+        flex-direction: row;
+        row-gap: .10rem;
+    }
+
+    .home__social-link {
+        font-size: var(--normal-font-size);
+    }
+
+    .home__container-data {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home__container--img {
+        width: 100%;
+        left: 0;
+        margin-top: 20px;
+    }
+
+    .my__info {
+        display: none;
+    }
+
+    .about__info {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about__description {
+        padding: 0;
+    }
+
+    .services__modal-content {
+        padding: 4.5rem 1.5rem 2.5rem;
+    }
+
+    .services__modal-description {
+        padding: 0;
+    }
+
+    .contact__container,
+    .work__container {
+        grid-template-columns: 332px
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr;
+    }
+
+    .footer__links {
+        justify-self: flex-start;
+    }
+
+    
+};
+
+/* Small Devices */
+
+@media screen and (max-width: 350px) {
+    .container {
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+
+    .home__img {
+        width: 200px;
+    }
+
+    .home__title {
+        font-size: var(--h1-font-size);
+    }
+
+    .home__subtitle {
+        font-size: var(--normal-font-size);
+    }
+
+    .about__info {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: .5rem;
+    }
+
+    
+
+
+    .contact__container,
+    .work__container,
+    .skills__container,
+    .qualification__container {
+        grid-template-columns: 1fr;
+    }
+
+    .skills__title {
+        font-size: var(--normal-font-size);
+    }
+
+    .work__item {
+        font-size: var(--small-font-size);
+    }
+
+    .work__filters {
+        column-gap: .25rem;
+    }
+
+    .services__container {
+        grid-template-columns: max-content;
+    }
+
+    .services__content {
+        padding-right: 3.5 rem;
+    }
 }
