--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Red+Hat+Display:wght@500;700&display=swap');
 
 :root {
-    /*===== Colors =====*/
+    /*===== Colores =====*/
     --hue-color:242;
 
-    /* HSL Color Mode */
+    /* HSL Color */
     --skin-color: hsl(342, 92%, 46%);
     --title-color: hsl(var(--hue-color), 8%, 95%);
     --text-color: hsl(var(--hue-color), 8%, 85%);
@@ -13,7 +13,7 @@
     --scroll-bar-color: hsl(var(--hue-color), 12%, 38%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 26%);
 
-    /*===== Font and Typography =====*/
+    /*===== Fuente y tipografia =====*/
     --body-font: 'Poppins', sans-serif;
 
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
@@ -25,7 +25,7 @@
     --small-font-size: .875rem;
     --smaller-font-size: .813rem;
 
-    /*===== Font Weight =====*/
+    /*===== Font =====*/
     --font-medium: 500;
     --font-bold: 600;
 
@@ -68,6 +68,8 @@ input {
 body {
     background-color: var(--body-color);
     color: var(--text-color);
+    overflow-x: hidden;
+
 }
 
 h1, h2, h3 {
@@ -121,7 +123,7 @@ input {
 .section__title {
     text-align: center;
     font-size: var(--h1-font-size);
-    margin-bottom: var(--ab-3)
+    margin-bottom: 40px
 }
 
 .section__title::before {
@@ -308,9 +310,6 @@ main {
 
 }
 
-.home__img {
-    display: none;
-}
 
 .home__container-data {
     display: flex;
@@ -330,9 +329,8 @@ main {
 
 
 .home__title {
-    font-size: var(--biggest-font-size);
-
-    margin: 50px 0 30px
+    font-size: var(--biggest-font-size); 
+    margin: 50px 0 8px
 }
 
 .home__subtitle {
@@ -626,21 +624,6 @@ main {
     padding-top: 1rem;
 }
 
-.work__filters {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: .75rem;
-    margin-bottom: 2rem;
-}
-
-.work__item {
-    cursor: pointer;
-    color: var(--title-color);
-    padding: .25rem .75rem;
-    font-weight: var(--font-medium);
-    border-radius: .5rem;
-}
 
 .work__card {
     background-color: var(--box-color);
@@ -739,10 +722,7 @@ main {
     border-radius: .5rem;
 }
 
-.portfolio__popup-subtitle {
-    font-size: var(--smaller-font-size);
-    margin-bottom: var(--mb-0-25);
-}
+
 
 .details__title {
     font-size: var(--h3-font-size);
